Fix spacing for leading featured articles

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2604,3 +2604,19 @@ div {
 .jss-slider.jss-slider-template-design .owl-carousel .jss-image .jss-image-int {
     background-size: 75% auto !important;
 }
+
+// Fix for leading featured articles when sidebars exists
+body.sidebars_exist {
+
+	#main .blog-featured .items-leading {
+		padding: 30px;
+	}
+
+	#below-content {
+		padding: 0 30px 30px;
+	}
+
+	#above-content {
+		padding: 10px 30px 0;
+	}
+}
